name: oasis
version: 0.5
synopsis: Binding to libethjet for Ethereum precompiled contracts
homepage: https://github.com/dapphub/libethjet
license: GPL-3
license-file: LICENSE
author: Mikael Brockman
maintainer: mikael@brockman.se
build-type: Simple
cabal-version: >=1.10

executable oasis
  hs-source-dirs: src
  main-is: Oasis.hs
  default-language: Haskell2010
  ghc-options: -O0 -Wall
  build-depends:
    base == 4.*,
    aeson,
    data-dword,
    bytestring,
    base16-bytestring,
    pipes,
    pipes-bytestring,
    pipes-group,
    lens,
    lens-aeson,
    text,
    wreq,
    hevm,
    directory,
    vector
