name: oasis-orders
version: 0.6
synopsis: Parse order books from OasisDEX JSON logs
homepage: https://github.com/dapphub/libethjet
license: GPL-3
license-file: LICENSE
author: Mikael Brockman
maintainer: mikael@brockman.se
build-type: Simple
cabal-version: >=1.10

executable oasis-orders
  hs-source-dirs: src
  main-is: Oasis.hs
  default-language: Haskell2010
  ghc-options: -O2 -Wall
  build-depends:
    base == 4.*,
    aeson,
    binary,
    containers,
    data-dword,
    bytestring,
    base16-bytestring,
    pipes,
    pipes-text,
    lens,
    lens-aeson,
    text,
    hevm,
    directory,
    vector
